fixing wraping of too long title in file opener

--- a/data/assets/core.css
+++ b/data/assets/core.css
@@ -103,7 +103,7 @@
     border: 0;
     background-color: transparent;
     color: #333333;
-    /*white-space: nowrap;*/
+    word-break: break-all;
     overflow: hidden;
 }
 
